--- a/tensorflow-sys/Cargo.toml
+++ b/tensorflow-sys/Cargo.toml
@@ -31,7 +31,7 @@ flate2 = "1.0.24"
 pkg-config = "0.3.25"
 semver = "1.0.13"
 tar = "0.4.38"
-zip = "0.6.2"
+zip = { git = "https://github.com/zip-rs/zip", rev = "bb230ef56adc13436d1fcdfaa489249d119c498f" }
 
 [features]
 tensorflow_gpu = []
